# cyphy_testbed

./: .gitignore  .gitmodules  README.md  test_dd_controller.py
ws/src/cis_supervisor/: CMakeLists.txt  package.xml
ws/src/cis_supervisor/config/: cis_supervisor_params.yaml
ws/src/cis_supervisor/config/data/: Ad.csv  Bd.csv  cis0_A.csv  cis0_b.csv  cis1_A.csv  cis1_b.csv  cis2_A.csv  cis2_b.csv  cis3_A.csv  cis3_b.csv  cis4_A.csv  cis4_b.csv  cis5_A.csv  cis5_b.csv  cis6_A.csv  cis6_b.csv  cis7_A.csv  cis7_b.csv  cis8_A.csv  cis8_b.csv  inputA.csv  inputb.csv  rcis0_A.csv  rcis0_b.csv  rcis1_b.csv  rcis2_b.csv  rcis3_b.csv  rcis4_b.csv  rcis5_b.csv  rcis6_b.csv  rcis7_b.csv  rcis8_b.csv  traj_input.csv  traj_state.csv
ws/src/cis_supervisor/exec/: cis_supervisor_node.cpp
ws/src/cis_supervisor/include/cis_supervisor/: cis_supervisor.hpp  cis_supervisor_data.hpp  cis_supervisor_ros.hpp  gurobiRoutines.hpp
ws/src/cis_supervisor/msg/: PerformanceMsg.msg
ws/src/cis_supervisor/src/: cis_supervisor.cpp  cis_supervisor_ros.cpp  gurobiRoutines.cpp
ws/src/control_router/: CMakeLists.txt  package.xml
ws/src/control_router/exec/: control_router_node.cpp
ws/src/control_router/include/control_router/: control_router.hpp
ws/src/control_router/msg/: NetworkStatusMsg.msg
ws/src/control_router/src/: control_router.cpp
ws/src/control_router/srv/: EnableNWController.srv  SelectController.srv
ws/src/controller_mpc/: CMakeLists.txt  package.xml
ws/src/controller_mpc/exec/: mpc_controller_node.cpp
ws/src/controller_mpc/include/: mpc_controller.h  mpc_wrapper.h
ws/src/controller_mpc/model/: quadrotor_model_thrustrates.cpp
ws/src/controller_mpc/src/: mpc_controller.cpp  mpc_wrapper.cpp
ws/src/crazyflie_controllers/: CMakeLists.txt  package.xml
ws/src/crazyflie_controllers/cbf_controller/: CMakeLists.txt  package.xml
ws/src/crazyflie_controllers/cbf_controller/exec/: cbf_controller_node.cpp
ws/src/crazyflie_controllers/cbf_controller/src/: cbf_controller.cpp  cbf_controller_ros.cpp
ws/src/crazyflie_controllers/cis_supervisor/: CMakeLists.txt  package.xml
ws/src/crazyflie_controllers/cis_supervisor/exec/: cis_supervisor_node.cpp
ws/src/crazyflie_controllers/cis_supervisor/msg/: ObstacleMsg.msg
ws/src/crazyflie_controllers/cis_supervisor/src/: cis_supervisor.cpp  cis_supervisor_ros.cpp
ws/src/crazyflie_controllers/cmd_vel_converter/: CMakeLists.txt  package.xml
ws/src/crazyflie_controllers/common/include/: math3d.h  pwm.h
ws/src/crazyflie_controllers/common/src/: cmd_vel_converter.cpp
ws/src/crazyflie_controllers/config/fblin_controller/: params.yaml
ws/src/crazyflie_controllers/config/geometric_controller/: params.yaml
ws/src/crazyflie_controllers/dd_controller/: CMakeLists.txt  package.xml
ws/src/crazyflie_controllers/dd_controller/config/: dd_controller_params.yaml
ws/src/crazyflie_controllers/dd_controller/exec/: dd_controller_node.cpp
ws/src/crazyflie_controllers/dd_controller/msg/: MotorsCtrlStamped.msg  PerformanceMsg.msg
ws/src/crazyflie_controllers/dd_controller/src/: dd_estimator.cpp  dd_estimator_param.cpp
ws/src/crazyflie_controllers/demo_ctrl/: CMakeLists.txt  package.xml
ws/src/crazyflie_controllers/fblin_controller/: CMakeLists.txt  package.xml
ws/src/crazyflie_controllers/geometric_controller/: CMakeLists.txt  package.xml
ws/src/crazyflie_controllers/lfd_controller/: CMakeLists.txt  package.xml
ws/src/dd_controller/: CMakeLists.txt  package.xml
ws/src/dd_controller/config/: dd_controller_params.yaml
ws/src/dd_controller/exec/: dd_controller_node.cpp
ws/src/dd_controller/launch/: dd_controller.launch
ws/src/dd_controller/msg/: ParamEstimateStamped.msg  StateEstimateStamped.msg
ws/src/dd_controller/src/: dd_controller.cpp  dd_controller_ros.cpp  dd_estimator.cpp  dd_estimator_param.cpp
ws/src/dummy_nodes/: CMakeLists.txt  anchors.yaml  dummy_node.py  package.xml  recorder.py
ws/src/dummy_nodes/exec/: dummy_anchors_node.cpp
ws/src/dummy_nodes/src/: anchors.yaml  dummy_anchors.cpp
ws/src/gtrack_server/: CMakeLists.txt  package.xml
ws/src/gtrack_server/exec/: gtrack_server_node.cpp
ws/src/gtrack_server/src/: gatlas.cpp  gtrack_server.cpp  ros_gtrack_server.cpp
ws/src/guidance/: CMakeLists.txt  guidance_helper.py  guidance_node.py  package.xml
ws/src/guidance/action/: GuidanceTarget.action
ws/src/guidance/guidance_class/: guidance_class.py
ws/src/guidance/guidance_helper_classes/: mission_class.py  trajectorygenerator_class.py
ws/src/guidance/srv/: ExeMission.srv  GenImpTrajectoryAuto.srv  MPC_RefWindow.srv
ws/src/guidance/test/: test_genBezier.py  test_helpers.py
ws/src/guidance/trjgen/: guidance_helper.py  trjgen_core.py
ws/src/manager/: CMakeLists.txt  manager_node.py  package.xml
ws/src/manager/manager_class/: manager_class.py
ws/src/manager/srv/: StartAll.srv
ws/src/mn_detector/: CMakeLists.txt  package.xml
ws/src/mn_detector/exec/: mn_detector_node.cpp
ws/src/mn_detector/src/: mn_detector.cpp
ws/src/rarena/: CMakeLists.txt  anchors.yaml  arena-playground.tar  arena.py  arena_node.py  arena_node_2.py  cameras.yaml  main.py  package.xml  rarena.py  rarena_node.py  rosarena.py  rosarena2.py
ws/src/rarena/arena_playground/: box-interact.py  box-runner-anim.py  json_arena.py  lib-test.py  sphere-follower.py
ws/src/rarena/classes/: __init__.py  drone_object.py  pawn.py  pawn_object.py  rosarena.py  rosarena_object.py  rosarenamanager.py
ws/src/rarena/config/: atlas.json
ws/src/simulator/: CMakeLists.txt  package.xml
ws/src/simulator/anchor_sim/: CMakeLists.txt  package.xml
ws/src/simulator/config/: simulator_params.yaml
ws/src/simulator/drone_simulator/: CMakeLists.txt  package.xml
ws/src/simulator/exec/: simulator_node.cpp
ws/src/simulator/src/: simulator.cpp
ws/src/state_aggregator/: CMakeLists.txt  package.xml
ws/src/state_aggregator/config/: Kobs.csv
ws/src/state_aggregator/launch/: cyphy_rviz.rviz
ws/src/state_aggregator/src/: state_aggregator.cpp
ws/src/state_aggregator/srv/: ControlSensor.srv
ws/src/utilities/: CMakeLists.txt  package.xml
(+170 files in other folders)
