<?xml version="1.0"?>
<package format="2">
  <name>control_router</name>
  <version>0.0.0</version>
  <description>The testbed control router </description>

  <author email="lpannocchi@g.ucla.edu">Luigi Pannocchi</author>
  <maintainer email="lpannocchi@g.ucla.edu">Luigi Pannocchi</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>

  <depend>roscpp</depend>
  <depend>testbed_msgs</depend>
  <depend>crazyflie_driver</depend>
  <depend>utilities</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
