<?xml version="1.0"?>
<package>
    <name>dd_controller</name>
	<version>0.0.1</version>
	<description>Data driven controller ROS implementation</description>

	<maintainer email="lpannocchi@g.ucla.edu">Luigi Pannocchi</maintainer>

	<license>MIT</license>

	<author email="lpannocchi@g.ucla.edu">Luigi Pannocchi</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>std_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	
	<run_depend>std_msgs</run_depend>
	<run_depend>roscpp</run_depend>
</package>
