<?xml version="1.0"?>
<package>
	<name>rarena</name>
	<version>0.0.1</version>
	<description>ROS-Arena interface</description>

	<maintainer email="lpannocchi@g.ucla.edu">Luigi Pannocchi</maintainer>

	<license>GPL</license>

	<author email="lpannocchi@g.ucla.edu">Luigi Pannocchi</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>tf</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>testbed_msgs</build_depend>
	<build_depend>control_router</build_depend>


	<run_depend>tf</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>testbed_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
    <run_depend>commander_interface</run_depend>
	<run_depend>control_router</run_depend>
</package>
