<?xml version="1.0"?>
<package>
	<name>utilities</name>
	<version>0.0.1</version>
	<description>Utilities</description>

	<maintainer email="lpannocchi@g.ucla.edu">Luigi Pannocchi</maintainer>

	<license>MIT</license>

	<author email="lpannocchi@g.ucla.edu">Luigi Pannocchi</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>tf</build_depend>
	<build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	
	<run_depend>tf</run_depend>
	<run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
	<run_depend>roscpp</run_depend>
</package>
