<?xml version="1.0"?>
<package format="2">
	<name>cis_supervisor</name>
	<version>0.0.0</version>
	<description>Control Invariant Set Supervisor </description>

  <license>TODO</license>

  <maintainer email="lpannocchi@g.ucla.com">Luigi Pannocchi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>testbed_msgs</build_depend>
        <build_depend>message_generation</build_depend>
	
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>testbed_msgs</exec_depend>
    	<exec_depend>message_generation</exec_depend>
     	<exec_depend>message_runtime</exec_depend>
</package>
