<?xml version="1.0"?>
<package format="2">
	<name>dd_controller</name>
	<version>0.0.1</version>
	<description>Data driven controller package</description>
	<maintainer email="lpannocchi@g.ucla.edu">Luigi Pannocchi</maintainer>

	<license>MIT</license>

	<author email="lpannocchi@g.ucla.edu">Luigi Pannocchi</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>std_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>utilities</build_depend>
	<build_depend>message_generation</build_depend>

	<exec_depend>std_msgs</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>utilities</exec_depend>
	<exec_depend>message_generation</exec_depend>
	<exec_depend>message_runtime</exec_depend>
</package>
