<?xml version="1.0"?>
<package format="2">
	<name>lfd_controller</name>
	<version>0.0.0</version>
	<description>Learning from demonstrations controller for crazyflie </description>

  <license>TODO</license>

  <maintainer email="asultangazin@g.ucla.com">Alimzhan Sultangazin</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>std_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>roslib</build_depend>
	<build_depend>testbed_msgs</build_depend>
	<build_depend>crazyflie_driver</build_depend>
	
	<exec_depend>crazyflie_driver</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>roslib</exec_depend>
	<exec_depend>testbed_msgs</exec_depend>
</package>
